# MCP-Autonomous-Diamond-Spectroscopy-

./: .gitignore  README.md  design_choices.md  main.py  pyproject.toml
Miscellaneous/: UROP Spring Notes (2026).docx  Update of Automated optical alignment using digital twins - mod.ipynb  thorlabs_xa_simple_motion_test.py
Miscellaneous/weather-simple-mcp-server/: main.py  pyproject.toml  weather.py
NN/: Update of Automated optical alignment using digital twins.ipynb
mcp_servers/: dotnet_cast.py  optics_server.py  orchestrator_server.py  power_meter_server.py  surrogate_fiber_coupling.py
repeatability_logs/repeatability_27272875_20260328T213654Z_055073b6/: manifest.json  samples.csv
repeatability_logs/repeatability_27272875_20260328T230824Z_9c8deec1/: manifest.json  samples.csv  summary.json
surrogate-NN/: Update of Automated optical alignment using digital twins.ipynb
surrogate-NN/NN_parameter_data/: fiber_coupling_model.pth  normalisation_parameters.npz
surrogate-NN/sample_data/: TwoDMapOnTwoMirrorsLargeRangeFlexibleShaft_Run2_axis1.npz  TwoDMapOnTwoMirrorsLargeRangeFlexibleShaft_Run2_axis2.npz
tests/: test_optics_server.py  test_optics_server_integration.py  test_orchestrator_server.py  thorlabs_xa_repeatability_study.py
utils/: README.md  move_steps.py  set_mirror_angle.py  sweep_mirror.py
