[project]
name = "mcp-diamond-spectroscopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.26.0",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "torch>=2.10.0",
]
