[project]
name = "mcp-diamond-spectroscopy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "matplotlib>=3.10.8",
    "mcp[cli]>=1.26.0",
    "numpy>=2.4.3",
    "psutil>=7.2.2",
    "pydantic>=2.12.5",
    "pythonnet>=3.0.5",
    "pyvisa>=1.16.2",  # requires NI-VISA (or compatible VISA runtime) on the host for hardware
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "zeroconf>=0.148.0",
]
